@@ -1,0 +1,3 @@
+SUBDIRS = basic console embedding web gtk x11
+
+EXTRA_DIST = SConscript
