@@ -39,5 +39,5 @@ for source in ex_sources:
     Default (xenv.Program (target=source[:-2], source=source))
 
 path = os.path.join (distdir, 'examples', 'embedding')
-target = env.Install (path, ex_sources + ['SConscript', 'add.st', 'average.st', 'do-me.st'])
+target = env.Install (path, ex_sources + ['Makefile.am', 'SConscript', 'add.st', 'average.st', 'do-me.st'])
 env.Alias ('sdist', target)
