@@ -326,8 +326,14 @@ syx_initialize_system (void)
   if (!SYX_IS_NIL (process))
     syx_scheduler_remove_process (process);
 
+  /* initialize the system */
   process = syx_process_new ();
-  context = syx_send_binary_message (process, syx_nil, syx_globals, "startupSystem:", arguments);
+  context = syx_send_binary_message (process, syx_nil, syx_globals, "initializeSystem:", arguments);
+  syx_process_execute_blocking (process);
+
+  /* now schedule to startup */
+  process = syx_process_new ();
+  context = syx_send_unary_message (process, syx_nil, syx_globals, "startupSystem");
   SYX_PROCESS_SUSPENDED (process) = syx_false;
   
   syx_system_initialized = TRUE;
